Try java 13 new features.